--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,9 @@ jobs:
     - name: Publish .NET Core project
       run: dotnet publish -c Release -o release --nologo
 
-    # changes the base-tag in index.html from '/' to 'AKarateFelgueiras' to match GitHub Pages repository subdirectory
-    - name: Change base-tage in index.html from / to AKarateFelgueiras
-      run: sed -i 's/<base href="\/" \/>/<base href="\/AKarateFelgueiras\/" \/>/g' release/wwwroot/index.html
+    # changes the base-tag in index.html from '/' to 'akaratefelgueiras' to match GitHub Pages repository subdirectory
+    - name: Change base-tage in index.html from / to akaratefelgueiras
+      run: sed -i 's/<base href="\/" \/>/<base href="\/akaratefelgueiras\/" \/>/g' release/wwwroot/index.html
 
     # copy index.html to 404.html to serve the same file when a file is not found
     - name: copy index.html to 404.html
