--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
       run: dotnet publish -c Release -o release --nologo
 
     # changes the base-tag in index.html from '/' to 'akaratefelgueiras' to match GitHub Pages repository subdirectory
-    - name: Change base-tage in index.html from / to akaratefelgueiras
-      run: sed -i 's/<base href="\/" \/>/<base href="\/akaratefelgueiras\/" \/>/g' release/wwwroot/index.html
+    #- name: Change base-tage in index.html from / to akaratefelgueiras
+    #  run: sed -i 's/<base href="\/" \/>/<base href="\/akaratefelgueiras\/" \/>/g' release/wwwroot/index.html
 
     # copy index.html to 404.html to serve the same file when a file is not found
     - name: copy index.html to 404.html
